--- a/Assignment-2/css/style.css
+++ b/Assignment-2/css/style.css
@@ -1,11 +1,34 @@
 .blah {
     margin:auto; 
 
-    font-size:35px;
+    font-size:23px;
     color: rgba(14, 13, 13, 0.767);
     width:315px;
-    border: 1px solid red;
+    border: 0px solid red;
     
+    
+}
+
+.bla {
+    margin:auto; 
+
+    color: rgba(14, 13, 13, 0.767);
+    width:315px;
+    border: 1px solid rgba(158, 151, 151, 0.623);
+    padding: 20px 15px;
+    border-radius: 5px;
+
+}
+
+.bl {
+    margin:auto; 
+
+    color: rgba(14, 13, 13, 0.767);
+    width:315px;
+    border: 1px solid rgba(158, 151, 151, 0.623);
+    padding: 20px 15px;
+    border-radius: 5px;
+
 }
 .buttons {
     
