--- a/Assignment-2/css/style.css
+++ b/Assignment-2/css/style.css
@@ -32,19 +32,23 @@
 }
 .container{
      width:100%; 
+     border: 0px solid rgba(158, 151, 151, 0.623);
     }    
 
 .align-left{
-     float: left;width:100%;
-     border: 1px solid rgba(158, 151, 151, 0.623); 
+     float: left;
+     border: 0px solid rgba(158, 151, 151, 0.623); 
+     /* margin:auto; */
+     margin-left: 25%;
     }
 
 .align-right{
      float: right;
-     width:10%; 
-     margin-top: -3%;
-     margin-right: 5%;
-     border: 1px solid rgba(158, 151, 151, 0.623);
+     /* margin:auto; */
+     /* margin-top: -1%; */
+    
+     margin-right: 25%;
+     border: 0px solid rgba(158, 151, 151, 0.623);
      
      
     }
