--- a/Assignment-4/rapidorintro/product/templates/product/main.html
+++ b/Assignment-4/rapidorintro/product/templates/product/main.html
@@ -117,6 +117,7 @@
   <div class="col"><h3><b>Code</b></h3></div>
   <div class="col"><h3><b>Unit Price</b></h3></div>
   <div class="col"><h3><b>tax Percent</b></h3></div>
+  <div class="col"><h3><b>Action</b></h3></div>
 </div>
 <div>
 
