Search function issue fixed

--- a/Assignment-4/rapidorintro/order/templates/order/order.html
+++ b/Assignment-4/rapidorintro/order/templates/order/order.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href={% static 'style.css'%} rel="stylesheet">
     
-    <title>Products</title>
+    <title>Order</title>
 
 </head>
   
@@ -31,10 +31,13 @@
         <div class='col-md-4'style='margin-top:10px'>
           <input class="form-control" list="datalistOptions" id="search" placeholder="Search Customer...">
             <datalist id="datalistOptions">
-              <option value="">
+            
+              
+
           
             </datalist>
-    
+            <p id='customer_name'> <p>
+ <button id='button' >sd</button>   
         </div>
     
       </div>
