Search function issue fixed-2

--- a/Assignment-4/rapidorintro/order/templates/order/order.html
+++ b/Assignment-4/rapidorintro/order/templates/order/order.html
@@ -30,14 +30,10 @@
         </div>
         <div class='col-md-4'style='margin-top:10px'>
           <input class="form-control" list="datalistOptions" id="search" placeholder="Search Customer...">
-            <datalist id="datalistOptions">
-            
-              
-
-          
+            <datalist id="datalistOptions"
             </datalist>
             <p id='customer_name'> <p>
- <button id='button' >sd</button>   
+
         </div>
     
       </div>
