product selection added partially

--- a/Assignment-4/rapidorintro/order/templates/order/order.html
+++ b/Assignment-4/rapidorintro/order/templates/order/order.html
@@ -49,7 +49,7 @@
   Order
 </button>
 
-<button type='button' class='delete1'>click</button>
+
 <!-- Modal -->
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-xl">
@@ -87,7 +87,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary id='order_submit">ok</button>
+        <button type="button" class="btn btn-primary " id='order_submit'>ok</button>
       </div>
     </div>
   </div>
@@ -96,7 +96,20 @@
 
 
 
-
+ <div class="container">
+          <div class="row">
+          <div style="text-align:center" class="col"><h3><b>Delete</b></h3></div>
+            <div style="text-align:center" class="col"><h3><b>Product Name</b></h3></div>
+            <div style="text-align:center" class="col"><h3><b>Code</b></h3></div>
+            <div style="text-align:center" class="col"><h3><b>Unit Price</b></h3></div>
+            <div style="text-align:center" class="col"><h3><b>Quantity</b></h3></div>
+            <div style="text-align:center" class="col"><h3><b>Tax percent</b></h3></div>
+            <div style="text-align:center" class="col"><h3><b>Total Price</b></h3></div>
+            <hr style='border-top: 4px solid black;'>
+          </div>
+        <div class='output'>
+        </div>
+  </div>
 
 
 
