--- a/Assignment-4/rapidorintro/order/templates/order/order.html
+++ b/Assignment-4/rapidorintro/order/templates/order/order.html
@@ -104,12 +104,17 @@
             <div style="text-align:center" class="col"><h3><b>Unit Price</b></h3></div>
             <div style="text-align:center" class="col"><h3><b>Quantity</b></h3></div>
             <div style="text-align:center" class="col"><h3><b>Tax percent</b></h3></div>
-            <div style="text-align:center" class="col"><h3><b>Total Price</b></h3></div>
+            <div style="text-align:center" class="col"><h3><b>Line Price</b></h3></div>
             <hr style='border-top: 4px solid black;'>
           </div>
         <div class='output'>
         </div>
+
+        <div class="total_calculations">
+        </div>
+
   </div>
+  
 
 
 
@@ -121,7 +126,9 @@
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
- <script src={% static 'order.js'%}></script>
+ {% comment %} <script src={% static 'order.js'%}></script> {% endcomment %}
+ <script src='/static/order.js?v=1'></script>
+ 
 
   </body>
 </html>
