--- a/Assignment-4/rapidorintro/product/templates/product/main.html
+++ b/Assignment-4/rapidorintro/product/templates/product/main.html
@@ -153,7 +153,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src={% static 'product.js'%}></script>
+<script src={% static 'script_2.js'%}></script>
 
   </body>
 </html>
