--- a/Assignment-4/rapidorintro/order/templates/order/order.html
+++ b/Assignment-4/rapidorintro/order/templates/order/order.html
@@ -25,20 +25,30 @@
     <h3 style='text-align: center'>Order</h3>
     <hr>
 
-    <div class=container>
-      <div classs='row'>
-        <div class='col-md-2'>
-          <h3>Customer Search:</h3>
-        </div>
-        <div class='col-md-4'style='margin-top:10px'>
-          <input class="form-control" list="datalistOptions" id="search" placeholder="Search Customer...">
-            <datalist id="datalistOptions"
-            </datalist>
 
-        </div>
-        <div class='col-md-6'>
-        <p id='customer_name'></p>
-      </div>
+  
+
+  <div class="container">
+          <div class="row">
+            <div class="col"><h5>Customer Search:</h5></div>
+            <div class="col">
+                <input class="form-control" list="datalistOptions" id="search" placeholder="Search Customer...">
+                <datalist id="datalistOptions">
+                </datalist>
+            </div>
+            
+            <div class="col"><p id='customer_name'>customer_name:</p></div>
+            
+          </div>
+  </div>
+
+
+
+
+
+
+  
+    
 
 
 
@@ -46,7 +56,7 @@
 <!-- Button trigger modal -->
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" id="order" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-  Order
+  Products
 </button>
 
 
@@ -116,7 +126,7 @@
 
   </div>
 
-  <button type="button" class="btn btn-secondary" id='onsubmit'>Submit</button>
+  <button type="button" class="btn btn-secondary" id='onsubmit' disabled=true>Submit</button>
   
 
 
