--- a/Assignment-4/rapidorintro/order/templates/order/order.html
+++ b/Assignment-4/rapidorintro/order/templates/order/order.html
@@ -77,6 +77,7 @@
             <div style="text-align:center" class="col"><h3><b>Product</b></h3></div>
             <div style="text-align:center" class="col"><h3><b>Code</b></h3></div>
             <div style="text-align:center" class="col"><h3><b>Unit Price</b></h3></div>
+            <div style="text-align:center" class="col"><h3><b>Tax Percent</b></h3></div>
             <div style="text-align:center" class="col"><h3><b>Action</b></h3></div>
             <hr style='border-top: 4px solid black;'>
           </div>
