beautiying the UI

--- a/Assignment-4/rapidorintro/order/templates/order/order.html
+++ b/Assignment-4/rapidorintro/order/templates/order/order.html
@@ -22,7 +22,7 @@
 
 
 
-    <h3 style='text-align: center'>Order</h3>
+    <h2 style='text-align: center'>ORDER</h2>
     <hr>
 
 
@@ -55,9 +55,20 @@
 
 <!-- Button trigger modal -->
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" id="order" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-  Products
-</button>
+<br>
+<div class="container">
+  <div classs='row'>
+   
+    <div classs='col-5' style='margin:auto; 
+    width:200px;' >
+      <button type="button" class="btn btn-primary" style="justify-content: center;" 
+      id="order" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+      Products
+      </button>
+    </div>
+  </div>
+</div>
+<br>
 
 
 <!-- Modal -->
@@ -73,12 +84,12 @@
 
         <div class="container">
           <div class="row">
-            <div style="text-align:center" class="col"><h3><b>Sl. No</b></h3></div>
-            <div style="text-align:center" class="col"><h3><b>Product</b></h3></div>
-            <div style="text-align:center" class="col"><h3><b>Code</b></h3></div>
-            <div style="text-align:center" class="col"><h3><b>Unit Price</b></h3></div>
-            <div style="text-align:center" class="col"><h3><b>Tax Percent</b></h3></div>
-            <div style="text-align:center" class="col"><h3><b>Action</b></h3></div>
+            <div style="text-align:center" class="col"><h4><b>Sl. No</b></h4></div>
+            <div style="text-align:center" class="col"><h4><b>Product</b></h4></div>
+            <div style="text-align:center" class="col"><h4><b>Code</b></h4></div>
+            <div style="text-align:center" class="col"><h4><b>Unit Price</b></h4></div>
+            <div style="text-align:center" class="col"><h4><b>Tax Percent</b></h4></div>
+            <div style="text-align:center" class="col"><h4><b>Action</b></h4></div>
             <hr style='border-top: 4px solid black;'>
           </div>
         
@@ -110,13 +121,13 @@
  <div class="container">
           <div class="row">
           
-            <div style="text-align:center" class="col"><h3><b>Product Name</b></h3></div>
-            <div style="text-align:center" class="col"><h3><b>Code</b></h3></div>
-            <div style="text-align:center" class="col"><h3><b>Unit Price</b></h3></div>
-            <div style="text-align:center" class="col"><h3><b>Quantity</b></h3></div>
-            <div style="text-align:center" class="col"><h3><b>Tax percent</b></h3></div>
-            <div style="text-align:center" class="col"><h3><b>Line Price</b></h3></div>
-            <div style="text-align:center" class="col"><h3><b> Delete</b></h3></div>
+            <div style="text-align:center " class="col"><h5 style='font-size: 1.5em'><b>Product Name</b></h5></div>
+            <div style="text-align:center" class="col"><h5 style='font-size: 1.5em'><b>Code</b></h5></div>
+            <div style="text-align:center" class="col"><h5 style='font-size: 1.5em'><b>Unit Price</b></h5></div>
+            <div style="text-align:center" class="col"><h5 style='font-size: 1.5em'><b>Quantity</b></h5></div>
+            <div style="text-align:center" class="col"><h5 style='font-size: 1.5em'><b>Tax percent</b></h5></div>
+            <div style="text-align:center" class="col"><h5 style='font-size: 1.5em'><b>Line Price</b></h5></div>
+            <div style="text-align:center" class="col"><h5 style='font-size: 1.5em'><b> Delete</b></h5></div>
             <hr style='border-top: 4px solid black;'>
           </div>
         <div class='output'>
@@ -126,10 +137,14 @@
         </div>
 
   </div>
-
-  <button type="button" class="btn btn-secondary" id='onsubmit' disabled=true>Submit</button>
+<div  style='margin-left:auto; 
+    width:200px; '>
+  <button type="button" style='visibility: hidden' class="btn btn-secondary" id='onsubmit' >Submit</button>
   
-
+</div>
+<br>
+<br>
+<br>
 
 
 
