--- a/Assignment-4/rapidorintro/customer/templates/customer/main.html
+++ b/Assignment-4/rapidorintro/customer/templates/customer/main.html
@@ -11,7 +11,7 @@
      {% comment %} <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> {% endcomment %}
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link href={% static 'style.css'%} rel="stylesheet">
-    1    <title>Polls</title>
+     <title>Polls</title>
   
 
 
@@ -111,7 +111,7 @@
   <div class="col"><h3><b>Mobile</b></h3></div>
   <div class="col"><h3><b>Action</b></h3></div>
 </div>
-<div>
+</div>
 
 
 <hr style='border-top: 4px solid black;'>
