vuejs if else condittions

--- a/Assignment-4/rapidorintro/assets/style.css
+++ b/Assignment-4/rapidorintro/assets/style.css
@@ -62,3 +62,15 @@
     padding: 20px;
     font-size: 14px;
 }
+
+.color{
+    color: blue
+}
+
+.color1{
+    color: red
+}
+
+.color2{
+    color: green
+}
